fixed images getting squished in mobile + properly init useMediaQuery (+build)

--- a/src/app/reset.css
+++ b/src/app/reset.css
@@ -7,6 +7,7 @@ a, a:where(:visited, :hover) {
 img, svg {
     display: block;
     max-width: 100%;
+    height: auto;
 }
 
 
